@@ -1,6 +1,6 @@
 package com.prueba.creacionUsuarios.controlador;
 
-import java.util.Collections;
+import java.util.Map;
 
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -10,7 +10,6 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.prueba.creacionUsuarios.dto.UserRequest;
-import com.prueba.creacionUsuarios.entidad.User;
 import com.prueba.creacionUsuarios.service.UserService;
 import com.prueba.creacionUsuarios.util.BadRequestException;
 import io.swagger.v3.oas.annotations.tags.Tag;
@@ -38,10 +37,9 @@ public class UserController {
                })
     public ResponseEntity<?> register(@RequestBody UserRequest request) {
         try {
-            User user = userService.registerUser(request);
-            return ResponseEntity.status(HttpStatus.CREATED).body(user);
+            return ResponseEntity.status(HttpStatus.CREATED).body(userService.registerUser(request));
         } catch (BadRequestException e) {
-            return ResponseEntity.badRequest().body(Collections.singletonMap("mensaje", e.getMessage()));
+            return ResponseEntity.badRequest().body(Map.of("mensaje", e.getMessage()));
         }
     }
 }
